Fix Render deployment: Add HEAD support, increase timeout, use port 10000

--- a/render.yaml
+++ b/render.yaml
@@ -6,12 +6,13 @@ services:
     plan: free
     region: oregon
     healthCheckPath: /health
+    autoDeploy: true
     envVars:
       - key: SEARXNG_DEBUG
         value: 0
       - key: SEARXNG_BIND_ADDRESS
         value: 127.0.0.1:8888
       - key: PORT
-        value: 8080
+        value: 10000
       - key: SEARXNG_SECRET
         generateValue: true
