--- a/searxng_settings.yml
+++ b/searxng_settings.yml
@@ -10,24 +10,30 @@ general:
   contact_url: false
   enable_metrics: false
 
+brand:
+  new_issue_url: https://github.com/searxng/searxng/issues/new
+  docs_url: https://docs.searxng.org/
+  public_instances: https://searx.space
+  wiki_url: https://github.com/searxng/searxng/wiki
+  issue_url: https://github.com/searxng/searxng/issues
+
 search:
   safe_search: 0
   autocomplete: ""
   default_lang: "en"
+  ban_time_on_fail: 5
+  max_ban_time_on_fail: 120
   formats:
     - html
     - json
 
 server:
+  port: 8888
+  bind_address: "127.0.0.1"
   secret_key: "changeme_secretkey_for_production"
   limiter: false
   image_proxy: true
-  method: "GET"
-  
-  # Bind to localhost only
-  bind_address: "127.0.0.1:8888"
-  
-  # Allow access from FastAPI
+  base_url: false
   public_instance: false
 
 ui:
@@ -35,34 +41,19 @@ ui:
   default_locale: "en"
   query_in_title: false
   infinite_scroll: false
-  default_theme: simple
+  default_theme: "simple"
   center_alignment: false
   results_on_new_tab: false
   advanced_search: true
-
-# Enable popular engines
-engines:
-  - name: brave
-    disabled: false
-  - name: duckduckgo
-    disabled: false
-  - name: google
-    disabled: false
-  - name: bing
-    disabled: false
-  - name: wikipedia
-    disabled: false
-  - name: wikidata
-    disabled: false
-
-enabled_plugins:
-  - 'Hash plugin'
-  - 'Self Information'
-  - 'Tracker URL remover'
-  - 'Open Access DOI rewrite'
 
 outgoing:
   request_timeout: 10.0
   max_request_timeout: 15.0
   useragent_suffix: ""
   enable_http2: true
+
+enabled_plugins:
+  - 'Hash plugin'
+  - 'Self Information'
+  - 'Tracker URL remover'
+  - 'Open Access DOI rewrite'
