--- a/searxng_settings.yml
+++ b/searxng_settings.yml
@@ -23,6 +23,7 @@ search:
   default_lang: "en"
   ban_time_on_fail: 5
   max_ban_time_on_fail: 120
+  default_doi_resolver: "oadoi.org"
   formats:
     - html
     - json
