--- a/searxng_settings.yml
+++ b/searxng_settings.yml
@@ -1,65 +1,19 @@
-# SearXNG Settings for Production Deployment
+# SearXNG Settings - Minimal configuration using defaults
 
 use_default_settings: true
 
 general:
   debug: false
   instance_name: "SearXNG Search API"
-  privacypolicy_url: false
-  donation_url: false
-  contact_url: false
-  enable_metrics: false
-
-brand:
-  new_issue_url: https://github.com/searxng/searxng/issues/new
-  docs_url: https://docs.searxng.org/
-  public_instances: https://searx.space
-  wiki_url: https://github.com/searxng/searxng/wiki
-  issue_url: https://github.com/searxng/searxng/issues
 
 search:
   safe_search: 0
   autocomplete: ""
-  default_lang: "en"
-  ban_time_on_fail: 5
-  max_ban_time_on_fail: 120
   formats:
     - html
     - json
 
-doi_resolvers:
-  oadoi.org: 'https://oadoi.org/'
-  doi.org: 'https://doi.org/'
-
-default_doi_resolver: 'oadoi.org'
-
 server:
-  port: 8888
-  bind_address: "127.0.0.1"
   secret_key: "changeme_secretkey_for_production"
   limiter: false
   image_proxy: true
-  base_url: false
-  public_instance: false
-
-ui:
-  static_use_hash: true
-  default_locale: "en"
-  query_in_title: false
-  infinite_scroll: false
-  default_theme: "simple"
-  center_alignment: false
-  results_on_new_tab: false
-  advanced_search: true
-
-outgoing:
-  request_timeout: 10.0
-  max_request_timeout: 15.0
-  useragent_suffix: ""
-  enable_http2: true
-
-enabled_plugins:
-  - 'Hash plugin'
-  - 'Self Information'
-  - 'Tracker URL remover'
-  - 'Open Access DOI rewrite'
