--- a/searxng_settings.yml
+++ b/searxng_settings.yml
@@ -6,6 +6,13 @@ general:
   debug: false
   instance_name: "SearXNG Search API"
 
+brand:
+  new_issue_url: https://github.com/searxng/searxng/issues/new
+  docs_url: https://docs.searxng.org/
+  public_instances: https://searx.space
+  wiki_url: https://github.com/searxng/searxng/wiki
+  issue_url: https://github.com/searxng/searxng/issues
+
 search:
   safe_search: 0
   formats:
