--- a/search_api/requirements.txt
+++ b/search_api/requirements.txt
@@ -3,4 +3,7 @@ uvicorn==0.38.0
 httpx==0.28.1
 beautifulsoup4==4.14.2
 readability-lxml==0.8.4.1
-lxml==6.0.2
+lxml
+html2text
+trafilatura
+python-dateutil
