--- a/search_api/requirements.txt
+++ b/search_api/requirements.txt
@@ -9,3 +9,7 @@ trafilatura
 python-dateutil
 flashrank
 diskcache
+
+# Advanced fetch capabilities (stealth mode & JS rendering)
+curl_cffi>=0.7.0  # TLS fingerprint matching for high stealth mode
+# Note: ScrapingBee and Browserless are external services, no pip packages needed
