--- a/search_api/requirements.txt
+++ b/search_api/requirements.txt
@@ -13,3 +13,7 @@ diskcache
 # Advanced fetch capabilities (stealth mode & JS rendering)
 curl_cffi>=0.7.0  # TLS fingerprint matching for high stealth mode
 # Note: ScrapingBee and Browserless are external services, no pip packages needed
+
+# Scrapy for site-wide crawling
+scrapy>=2.11.0  # Web crawling framework
+itemadapter>=0.8.0  # For Scrapy item handling
