Add StealthClient for Anti-Bot Bypass with HTTP capabilities
- Implemented StealthClient to provide an HTTP client with anti-detection features.
- Added user-agent rotation, header randomization, and TLS fingerprint matching.
- Defined stealth levels: LOW, MEDIUM, and HIGH for varying degrees of stealth.
- Included realistic browser type and user-agent generation for enhanced fingerprinting evasion.
- Integrated methods for making GET requests with customizable stealth options.

--- a/search_api/requirements.txt
+++ b/search_api/requirements.txt
@@ -17,3 +17,6 @@ curl_cffi>=0.7.0  # TLS fingerprint matching for high stealth mode
 # Scrapy for site-wide crawling
 scrapy>=2.11.0  # Web crawling framework
 itemadapter>=0.8.0  # For Scrapy item handling
+
+# YouTube transcript extraction
+youtube-transcript-api>=1.0  # Fetch YouTube video transcripts
