feat: Implement robust content decompression, decoding, and sanitization for fetched web pages.

--- a/search_api/requirements.txt
+++ b/search_api/requirements.txt
@@ -12,6 +12,7 @@ diskcache
 
 # Advanced fetch capabilities (stealth mode & JS rendering)
 curl_cffi>=0.7.0  # TLS fingerprint matching for high stealth mode
+brotli>=1.1.0  # Brotli decompression for compressed responses
 # Note: ScrapingBee and Browserless are external services, no pip packages needed
 
 # Scrapy for site-wide crawling
